--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@progress/kendo-angular-grid": "^7.4.2",
     "keycloak-angular": "^13.0.0",
     "keycloak-js": "^20.0.2",
     "rxjs": "~7.5.0",
